[package]
name = "osxmem"
version = "0.1.2"
edition = "2024"
description = "A macOS library for reading and writing process memory using the Mach kernel APIs."
license = "MIT"
repository = "https://github.com/zaidzdz/osxmem"
readme = "README.md"
keywords = ["memory", "mach", "macos", "process"]
categories = ["os::macos-apis", "development-tools::debugging"]

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin"]

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14.11"
mach = "0.3.2"
