[package]
name = "osxmem"
version = "0.1.3"
edition = "2024"
description = "A macOS library for reading and writing process memory using the Mach kernel APIs."
license = "MIT"
repository = "https://github.com/zaidzdz/osxmem"
readme = "README.md"
keywords = ["memory", "mach", "macos", "process"]
categories = ["os::macos-apis", "development-tools::debugging"]


[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14.11"
mach = "0.3.2"
